# Prediction-Market

./: .env.example  .gitignore  README.md  docker-compose.yml  local.db  pyproject.toml
app/: config.py  main.py
app/api/: routes_backtest.py  routes_news.py  routes_predictions.py  routes_stocks.py
backtest/: metrics.py  strategy.py  walk_forward.py
collectors/: __init__.py  base.py  dart.py  ecos.py  ingest_news.py  ingest_stocks.py  kis_market.py  krx_listed.py  naver_news.py  rss.py
dashboard/: streamlit_app.py
database/: demo_data.py  export.py  models.py  schema.sql  session.py
database/repositories/: listed_stocks.py  news_raw.py  predictions.py
features/: aggregate_news_features.py  build_daily_features.py  macro_features.py  market_features.py
models/: calibrate.py  datasets.py  market_direction.py  predict.py  run_prediction.py  stock_signal.py  train_baseline.py  train_lightgbm.py
processing/: __init__.py  cleaner.py  deduplicator.py  entity_extractor.py  event_classifier.py  sentiment_analyzer.py
tests/: test_backtest.py  test_cleaner.py  test_dedup.py  test_features.py  test_krx_listed_collector.py  test_market_direction.py  test_news_raw_repository.py  test_rss_collector.py  test_stock_signal.py
